<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interfaces_ext</name>
  <version>0.0.1</version>
  <description>ros2_transitive_interfaces extended sample interfaces</description>
  <maintainer email="48865772+chrissconyers@users.noreply.github.com">Chris Sconyers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>interfaces</build_depend>
  <exec_depend>interfaces</exec_depend>

</package>
